--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -2,6 +2,47 @@
 @tailwind components;
 @tailwind utilities;
 
+.editorContent {
+  background-color: #c6c5c5;
+  color: #1a1a1a;
+  width: 100%;
+  height: 400px;
+  flex: 1 1 0%;
+}
+
+.editorContent > * {
+  background-color: #362d2d;
+  height: 100%;
+  width: 100%;
+  outline: none;
+}
+
+.menuTools > button {
+  width: 120px;
+  padding: 2px;
+  background-color: #c6c5c5;
+}
+
+.menu-bar > * {
+  @apply p-1 bg-slate-300 rounded-lg hover:bg-slate-100 transition-colors duration-200;
+}
+
+.ProseMirror p.is-editor-empty:first-child::before {
+  color: #adb5bd;
+  content: attr(data-placeholder);
+  float: left;
+  height: 0;
+  pointer-events: none;
+}
+
+.scrollbar-hide {
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
+.scrollbar-hide::-webkit-scrollbar {
+  display: none;
+}
+
 :root {
   --max-width: 1100px;
   --border-radius: 12px;
