[feature] api request to openai

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -11,7 +11,7 @@
 }
 
 .editorContent > * {
-  background-color: #362d2d;
+  background-color: #ffffff;
   height: 100%;
   width: 100%;
   outline: none;
