--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -27,6 +27,10 @@
   @apply p-1 bg-slate-300 rounded-lg hover:bg-slate-100 transition-colors duration-200;
 }
 
+.skeleton {
+  @apply relative space-y-5 overflow-hidden rounded-2xl bg-gray-800/5 shadow-xl shadow-black/5 before:absolute before:inset-0 before:-translate-x-full before:-skew-x-12 before:animate-[shimmer_2s_infinite] before:border-t before:border-gray-800/10 before:bg-gradient-to-r before:from-transparent before:via-gray-800/10 before:to-transparent
+}
+
 .ProseMirror p.is-editor-empty:first-child::before {
   color: #adb5bd;
   content: attr(data-placeholder);
