--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -31,6 +31,33 @@
   @apply relative space-y-5 overflow-hidden rounded-2xl bg-gray-800/5 shadow-xl shadow-black/5 before:absolute before:inset-0 before:-translate-x-full before:-skew-x-12 before:animate-[shimmer_2s_infinite] before:border-t before:border-gray-800/10 before:bg-gradient-to-r before:from-transparent before:via-gray-800/10 before:to-transparent
 }
 
+.blockquote {
+  background: #f9f9f9;
+  border-left: 10px solid #ccc;
+  margin: 1.5em 10px;
+  padding: 0.5em 10px;
+  quotes: "\201C""\201D""\2018""\2019";
+}
+.blockquote:before {
+  color: #ccc;
+  content: open-quote;
+  font-size: 4em;
+  line-height: 0.1em;
+  margin-right: 0.25em;
+  vertical-align: -0.4em;
+}
+
+.button-block {
+  display: grid;
+  grid-template-columns: 30% 1fr;
+  grid-template-rows: 40% 60%;
+}
+
+.icon {
+  grid-area: 1 / 1 / 3 / 1;
+  place-self: center;
+}
+
 .scrollbar-hide {
   -ms-overflow-style: none;
   scrollbar-width: none;
